[package]
name = "sd-tokenizer"
version = "0.1.0"
edition = "2021"
description = "View the tokenisation of your words using the tokeniser."
repository = "https://github.com/rockerBOO/sd-tokenizer"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.89"
tokenizers = { default-features = false, features = ["unstable_wasm"], version = "0.22.2" }

[dependencies.web-sys]
version = "0.3.4"
features = [
    'console',
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
lto = true
opt-level = 's'
